err/pepperedform.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/WebHelpers-1.3.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/peppercorn'...
Listing './lib/python3.5/site-packages/peppercorn-0.5.egg-info'...
Listing './lib/python3.5/site-packages/pepperedform'...
Listing './lib/python3.5/site-packages/pepperedform/static'...
Listing './lib/python3.5/site-packages/pepperedform/static/js'...
Listing './lib/python3.5/site-packages/pepperedform/tests'...
Listing './lib/python3.5/site-packages/pepperedform-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webhelpers'...
Listing './lib/python3.5/site-packages/webhelpers/html'...
Compiling './lib/python3.5/site-packages/webhelpers/html/grid_demo.py'...
***   File "./lib/python3.5/site-packages/webhelpers/html/grid_demo.py", line 289
    print "... writing '%s'" % filename
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/html/render.py'...
***   File "./lib/python3.5/site-packages/webhelpers/html/render.py", line 395
    print render(html)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webhelpers/markdown.py'...
***   File "./lib/python3.5/site-packages/webhelpers/markdown.py", line 1865
    print OPTPARSE_WARNING
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/media.py'...
***   File "./lib/python3.5/site-packages/webhelpers/media.py", line 120
    print "%s:" % apath,
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/paginate.py'...
***   File "./lib/python3.5/site-packages/webhelpers/paginate.py", line 250
    raise Exception, "__getitem__ without slicing not supported"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webhelpers/public'...
Listing './lib/python3.5/site-packages/webhelpers/public/stylesheets'...
Listing './lib/python3.5/site-packages/webhelpers/pylonslib'...
Compiling './lib/python3.5/site-packages/webhelpers/textile.py'...
***   File "./lib/python3.5/site-packages/webhelpers/textile.py", line 2882
    print textile('tell me about textile.', head_offset=1)
                ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
